--- a/reasons.html
+++ b/reasons.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      background: url('https://i.imgur.com/0H4B4bP.png') repeat;
+  background: url('https://www.transparenttextures.com/patterns/hearts.png') repeat, #fff0f5;
       font-family: 'Poppins', sans-serif;
       padding: 2rem;
       color: #333;
@@ -66,7 +66,7 @@
       position: absolute;
       width: 20px;
       height: 20px;
-      background: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.vecteezy.com%2Ffree-png%2Fsmall-hearts&psig=AOvVaw06FNTFw7Y2jV5d97PAny3I&ust=1751451966264000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCODPnpq5m44DFQAAAAAdAAAAABAL') no-repeat center;
+background: url('https://www.transparenttextures.com/patterns/hearts.png') repeat;
       background-size: contain;
       animation: float 6s linear infinite;
     }
