--- a/reasons.html
+++ b/reasons.html
@@ -8,7 +8,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
     body {
-  background: url('https://www.transparenttextures.com/patterns/hearts.png') repeat, #fff0f5;
+background: url('hear.png') repeat, #fff0f5;
+
       font-family: 'Poppins', sans-serif;
       padding: 2rem;
       color: #333;
@@ -66,7 +67,8 @@
       position: absolute;
       width: 20px;
       height: 20px;
-background: url('https://www.transparenttextures.com/patterns/hearts.png') repeat;
+background: url('hear.png') repeat, #fff0f5;
+
       background-size: contain;
       animation: float 6s linear infinite;
     }
